--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-Welcome to the footclub
+<h1>Welcome to the NFC Club</h1>
+
+<div>
+    <div>
+        <a href="#">Home Page</a>
+        <a href="#">Contact Page</a>
+    </div>
+</div>
