adding the routing options

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 
 <div>
     <div>
-        <a href="#">Home Page</a>
-        <a href="#">Contact Page</a>
+        <a href="/home">Home Page</a>
+        <a href="/contact">Contact Page</a>
     </div>
 </div>
+<router-outlet></router-outlet>
