--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@ a {
 /** Basic styles **/
 * {
     font-family: "Dela Gothic One", "Montserrat", Arial, Helvetica, sans-serif;
-    background-color: rgb(51, 48, 48);
+    background-color: black;
     color: #f8f8f8;
     width: 100%;
 }
