--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -11,6 +11,9 @@
                 <label for="firstname">Prénom</label>
                 <input type="text" id="firstname" name="user_firstname">
             </li>
+        </ul>
+
+        <ul>
             <li>
                 <label for="email">Email</label>
                 <input type="email" id="email" name="user_email">
@@ -20,12 +23,20 @@
                 <label for="phone">Téléphone</label>
                 <input type="tel" id="phone" name="user_phone">
             </li>
-    
+        </ul>           
+        
+        <ul>
+            <li>
+                <label for="object">Objet du message</label>
+                <input type="text">
+            </li>
             <li>
                 <label for="file">Joindre un fichier</label>
                 <button type="submit">Choisir un fichier</button>
             </li>
-    
+        </ul>
+            
+        <ul>
             <li>
                 <label for="message">Message</label>
                 <textarea id="message" name="user_message"></textarea>
@@ -33,7 +44,7 @@
         </ul>
             
         <div class="button">
-            <button type="submit">Envoyer le message</button>
+            <button type="submit">ENVOYEZ</button>
         </div>
 
     </form>
